<resources>
    <string name="app_name">Go timer by js</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_screen_hint_0to9">0~9</string>
    <string name="setting_screen_hint_0to59">0~59</string>
    <string name="setting_screen_hint_0to60">0~60</string>
    <string name="setting_screen_hint_1to10">1~10</string>
    <string name="setting_screen_cho_reading">초읽기 :</string>
    <string name="setting_screen_fischer">피셔 :</string>
    <string name="total_time_went">총 대국진행 시간 0:00:00</string>
    <string name="total_soo">총 대국진행 수순 0수</string>
    <string name="player_cho_read">0회, +10</string>
</resources>