<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingTop="50dp"
           android:gravity="center"
           android:text="| 제한시간 |"
           android:textSize="@dimen/setting_screen_title_textSize">

       </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Player 1 :"
                android:textSize="@dimen/setting_screen_small_title_textSize">

            </TextView>
            <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/setting_screen_textSize"
                android:gravity="center"
            android:hint="@string/setting_screen_hint_0to9"
                android:id="@+id/p1_hour"
                android:inputType="number"
            >
        </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="시간"
                android:textSize="@dimen/setting_screen_textSize"
                android:paddingRight="5dp">

            </TextView>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/setting_screen_textSize"
                android:gravity="center"
                android:hint="@string/setting_screen_hint_0to59"
                android:id="@+id/p1_min"
                android:inputType="number"
                >
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="분"
                android:textSize="@dimen/setting_screen_textSize"
                android:paddingRight="5dp">

            </TextView>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/setting_screen_textSize"
                android:gravity="center"
                android:hint="@string/setting_screen_hint_0to59"
                android:id="@+id/p1_sec"
                android:inputType="number"
                >
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="초"
                android:textSize="@dimen/setting_screen_textSize">

            </TextView>






        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Player 2 :"
                android:textSize="@dimen/setting_screen_small_title_textSize">

            </TextView>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/setting_screen_textSize"
                android:gravity="center"
                android:hint="@string/setting_screen_hint_0to9"
                android:id="@+id/p2_hour"
                android:inputType="number"
                >
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="시간"
                android:textSize="@dimen/setting_screen_textSize"
                android:paddingRight="5dp">

            </TextView>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/setting_screen_textSize"
                android:gravity="center"
                android:hint="@string/setting_screen_hint_0to59"
                android:id="@+id/p2_min"
                android:inputType="number"
                >
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="분"
                android:textSize="@dimen/setting_screen_textSize"
                android:paddingRight="5dp">

            </TextView>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/setting_screen_textSize"
                android:gravity="center"
                android:hint="@string/setting_screen_hint_0to59"
                android:id="@+id/p2_sec"
                android:inputType="number"
                >
            </EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="초"
                android:textSize="@dimen/setting_screen_textSize">

            </TextView>






        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:src="@drawable/dotted_line"
             />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="초읽기"
                    android:textSize="@dimen/setting_screen_textSize"
                    android:id="@+id/cho_read_radioButton"
                    android:padding="10dp"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="피셔"
                    android:textSize="@dimen/setting_screen_textSize"
                    android:id="@+id/fischer_radioButton"
                    android:padding="10dp"
                   />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">


                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/setting_screen_textSize"
                    android:hint="@string/setting_screen_hint_0to60"
                    android:id="@+id/cho_read_sec"
                    android:inputType="number"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center"
                    >
                </EditText>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="초"
                    android:paddingRight="5dp"
                    android:textSize="@dimen/setting_screen_textSize">

                </TextView>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/setting_screen_textSize"
                    android:hint="@string/setting_screen_hint_1to10"
                    android:id="@+id/cho_read_times"
                    android:inputType="number"
                    android:gravity="center"
                    >
                </EditText>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="회"
                    android:textSize="@dimen/setting_screen_textSize">

                </TextView>

            </LinearLayout>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="50dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/applyButton"
                android:text="적용"></Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelButton"
                android:text="취소"></Button>


        </LinearLayout>



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>